# covert

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  covert.py  dev-protocol.md  pyproject.toml  verify_rollback.py  verify_safe_update.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml  security.yml
covert/: __init__.py  backup.py  cli.py  config.py  core.py  dependency_analyzer.py  exceptions.py  git_integration.py  interactive.py  lockfile.py  logger.py  notifications.py  pip_interface.py  progress.py  reports.py  tester.py  utils.py  vuln_scanner.py
docs/source/: api.md  cli.md  conf.py  configuration.md  contributing.md  index.md  installation.md  quickstart.md  troubleshooting.md  usage.md
docs/source/_static/css/: custom.css
examples/: advanced_usage.sh  config.toml  config.yaml  django-project.yaml  programmatic_usage.py
examples/workflows/: .gitlab-ci.yml  github-actions.yml
plans/: TECHNICAL_SPECIFICATION.md
scripts/: release.sh
tests/: __init__.py  conftest.py  test_backup.py  test_cli.py  test_core.py  test_interactive.py  test_notifications.py  test_pip_interface.py  test_progress.py  test_reports.py  test_security.py  test_tester.py  test_utils.py  test_vuln_scanner.py
tests/e2e/: __init__.py  test_dry_run.py  test_rollback_scenario.py  test_update_workflow.py
